--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,9 @@
   height: 100vh;
   width: 100vw;
 
-background-image: url(./weather.jpg);
-  background-size: fill;
-  background-repeat: no-repeat;
+background-image: url(./mountains-8387889_1920.jpg);
+  /* background-size: fill; */
+  /* background-repeat: no-repeat; */
   
 }
 .logo {
